--- a/student_performance_track/index.html
+++ b/student_performance_track/index.html
@@ -87,6 +87,7 @@
                                 <th>Chemistry</th>
                                 <th>Physics</th>
                                 <th>Biology</th>
+                                <th>Average</th>
                             </tr>
                         </thead>
 
